
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MonthViewActivity" >

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:text="@string/welcome"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/m1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:clickable="true"
            android:onClick="changeToTarget"
            android:text="1"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/m2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:clickable="true"
            android:onClick="changeToTarget"
            android:text="2"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/m3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:clickable="true"
            android:onClick="changeToTarget"
            android:text="3"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/m4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:clickable="true"
            android:onClick="changeToTarget"
            android:text="4"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/m5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:clickable="true"
            android:onClick="changeToTarget"
            android:text="5"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/m6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:clickable="true"
            android:onClick="changeToTarget"
            android:text="6"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/m7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:clickable="true"
            android:onClick="changeToTarget"
            android:text="7"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/m8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:clickable="true"
            android:onClick="changeToTarget"
            android:text="8"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/m9"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:clickable="true"
            android:onClick="changeToTarget"
            android:text="9"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/m10"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:clickable="true"
            android:onClick="changeToTarget"
            android:text="10"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/m11"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:clickable="true"
            android:onClick="changeToTarget"
            android:text="11"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/m12"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:clickable="true"
            android:onClick="changeToTarget"
            android:text="12"
            android:textSize="30sp" />
    </LinearLayout>
   
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/previousMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previousMonth" 
            android:onClick="previousYear"
            android:textSize="30sp"/>
            

        <TextView
            android:id="@+id/mes"
            android:gravity="center"
            android:layout_weight="100"
      		android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="30sp"/>

        <Button
            android:id="@+id/nextMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nextMonth" 
            android:onClick="nextYear"
            android:textSize="30sp"/>
            

    </LinearLayout>

    <ExpandableListView
        android:id="@+id/listView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

    </ExpandableListView>

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>
    
        <TextView
		android:id="@+id/loading"
		android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"    
        android:textSize="40sp"
        android:text="@string/loading" />


</LinearLayout>